1.6.7: ?
 *

1.6.6: February 16, 2009
 * Luminotes now recognizes "mailto:" links as external links, so you can
   include links to email addresses within your notes.
 * Several Luminotes Desktop improvements:
   * There is now a "close" link at the top of the page to completely shut
     down the process when you're done using Luminotes.
   * Luminotes Desktop now attempts to always run on a particular port number,
     which means that as long as it's running you can reach it from a constant
     web address.
   * You can now copy the Luminotes Desktop web address and paste it into
     another web browser without getting an error message.
 * Now, if you copy a link from another web page and paste it into a note,
   Luminotes properly recognizes it as an external link (rather than a link to
   a note).
 * Fixed a bug in which clicking "compare versions" during a conflict didn't
   actually display the changes between the two versions.

1.6.5: February 12, 2009
 * Now ignoring even more unneeded HTML tags from an MS Word copy-and-paste.
 * Fixed a bug in Internet Explorer in which hiding a focused note could cause
   the next note to display incorrectly.
 * Fixed a bug in Internet Explorer in which opening a note by following a link
   didn't display the opened note correctly.
 * Fixed a bug in which a drag-and-dropped note occasionally didn't resize back
   to its original size.
 * Re-fixed a bug in which hiding a focused note could (temporarily) leave an
   empty gap at the bottom of the page. 

1.6.4: February 12, 2009
 * Now ignoring certain unneeded HTML tags that end up in your notes when you
   copy and paste text from an MS Word document.
 * Fixed a bug in which clicking on the title field within a link pulldown did
   not position the text cursor there.
 * Fixed a bug in which clicking on an unfocused note didn't position the text
   cursor in the correct location.
 * Fixed bugs related to the display and hiding of previous note revisions.