@@ -1,0 +1,10 @@
+import imp
+import plugins
+
+def invoke( plugin_type, plugin_name, *args, **kwargs ):
+  plugin_name = u"%s_%s" % ( plugin_type, plugin_name )
+  plugin_location = imp.find_module( plugin_name, plugins.__path__ )
+  plugin_module = imp.load_module( plugin_name, *plugin_location )
+
+  function = getattr( plugin_module, plugin_type )
+  return apply( function, args, kwargs )
